fix: update GraficoPizza component styles for improved layout and visibility

--- a/ppe-front/src/pages/Admin/Dashboard/styles.module.css
+++ b/ppe-front/src/pages/Admin/Dashboard/styles.module.css
@@ -49,7 +49,9 @@ body {
 
 .container_desenpenho .CardDashs_container {
   display: flex;
-  gap: 52px;
+  gap: 25px;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .container_desenpenho .selects {
@@ -128,14 +130,15 @@ body {
 }
 
 .container_desenpenho .container_graficos .right {
-  border: 1px solid #da9e00;
-  padding: 20px;
+  background-color: #242424;
+  width: 38%;
+  padding: 0;
   border-radius: 10px;
 }
 
 .container_desenpenho .container_graficos .right .grafico_pizza {
-  width: 500px;
-  height: 200px;
+  width: 100%;
+  height: 450px;
 }
 
 /* RESPONSIVO MOBILE */
